PlayFab - Add creator image support
